2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidToStringOnStringsRule.cs: Fix in case where the method has no
	body (e.g. p/invoke, icalls...);

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidToStringOnStringsRule.cs: New rule (Lukasz Knop, GSoC 2007)
	* AvoidUncalledPrivateCodeRule.cs: New rule (Nidhi Rawal, GSoC 2007)
	* AvoidUninstantiatedInternalClassesRule.cs: New rule (Nidhi Rawal, 
	GSoC 2007)
	* DontIgnoreMethodResultRule.cs: New rule (Lukasz Knop, GSoC 2007)
	* UsingStringLengthInsteadOfCheckingEmptyStringRule.cs: New rule
	(Nidhi Rawal, GSoC 2007)
	* Gendarme.Rules.Performance.xml.in: Update rule descriptions.
	* Makefile.am: Add new rules/tests to build.
	* Gendarme.Rules.Performance.mdp: Update project file.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Performance.mdp, Test.Rules.Performance.mdp:  Added 
	AvoidUnusedParametersRule and the respective unit test to 
	MonoDevelop project file.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Performance.xml.in:  Added Uri for
	AvoidUnusedParametersRule.

2007-09-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParametersRule.cs: Fixes a NullReference exception if the
	method hasn't body.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidUnusedParametersRule.cs: Following the Jb Evain comments, I used
	a guard pattern for the method.HasBody in the
	ContainsReferenceDelegateInstructionFor method.  I also avoid 2 cast
	instructions in IsReferencedByDelegateMethod.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Performance.xml.in: Added the rule information in the
	xml file.
	
2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidUnusedParametersRule.cs: New rule to check for unused parameters
	in a method.
	* Makefile.am: Added the sources of the rule and the unit tests.

2006-10-15  Sebastien Pouliot  <sebastien@ximian.com>
