@@ -25,7 +25,6 @@
 // THE SOFTWARE.
 
 using System;
-using System.Collections;
 
 using Mono.Cecil;
 using Mono.Cecil.Cil;
@@ -37,7 +36,11 @@ namespace Gendarme.Rules.Performance
 	{		
 		public MessageCollection CheckMethod (MethodDefinition method, Runner runner)
 		{
-			MessageCollection messageCollection = new MessageCollection ();
+			// rule apply only if the method has a body (e.g. p/invokes, icalls don't)
+			if (!method.HasBody)
+				return runner.RuleSuccess;
+ 
+ 			MessageCollection messageCollection = new MessageCollection ();
 			
 			foreach (Instruction instruction in method.Body.Instructions) {					
 				if (instruction.Operand != null) {
